# yahshua-task-manager

./: .gitignore  Makefile  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  Makefile  pyproject.toml  requirements.in  requirements.txt
backend/tasks/: .env.sample  asgi.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
backend/tasks/migrations/: 0001_initial.py
frontend/: Dockerfile  Makefile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/ui/: button.tsx  dialog.tsx  toast.tsx  toaster.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/services/: taskService.test.ts  taskService.ts
